I added phone number. I also rearranged the folder

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p>Name: Ibrahim Alaya Is'haq</p>
 <p>Course: Backend Engineering Diploma at Altschool Africa</p>
 <p>Email: alayabrhm30@gmail.com</p>
+<p>Phone Number: 09067164175</p>
 </body>
 </html>
